--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>MainPushkin</title>
 </head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<style>
+  body {
+    background: url(https://www.keramspb.ru/files/pics/product/modern-surfaces-701128-223648.jpeg);
+   }
+</style>
+<div class = 'container'>
 <body>
 <h1>All you need is Pushkin</h1>
 <ul>
@@ -17,4 +24,5 @@ n = loop.index) }}">
     {% endfor %}
 </ul>
 </body>
+</div>
 </html>
