--- a/templates/show_poem.html
+++ b/templates/show_poem.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>poem</title>
+    <style>
+  body {
+    background: url(https://www.keramspb.ru/files/pics/product/modern-surfaces-701128-223648.jpeg);
+   }
+    </style>
 </head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <body>
+
+<div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="http://dj-projects.wikisociety.info/pl">All poems</a></li>
+            </ul>
+</div>
+{% for r in row['title'] %}
+<p>{{ r }} </p>
+{% endfor %}
 {% for r in row['verses'] %}
 <p> {{ r }} </p>
 {% endfor %}
