--- a/templates/show_poem.html
+++ b/templates/show_poem.html
@@ -17,12 +17,17 @@
               <li class="active"><a href="http://dj-projects.wikisociety.info/pl">All poems</a></li>
             </ul>
 </div>
-{% for r in row['title'] %}
-<p>{{ r }} </p>
-{% endfor %}
-{% for r in row['verses'] %}
-<p> {{ r }} </p>
-{% endfor %}
-
+<div align="center" class="panel panel-warning">
+    <div class="panel-heading">
+    {% for r in row['title'] %}
+    <p>{{ r }} </p>
+    {% endfor %}
+    </div>
+    <div class="panel-body">
+    {% for r in row['verses'] %}
+    <p> {{ r }} </p>
+    {% endfor %}
+    </div>
+</div>
 </body>
 </html>
