--- a/templates/show_poem.html
+++ b/templates/show_poem.html
@@ -17,7 +17,7 @@
               <li class="active"><a href="http://dj-projects.wikisociety.info/pl">All poems</a></li>
             </ul>
 </div>
-<div align="center" class="panel panel-warning">
+<div align="center" class="panel panel-info">
     <div class="panel-heading">
     {% for r in row['title'] %}
     <p>{{ r }} </p>
