--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <style>
   body {
-    background: url(https://www.keramspb.ru/files/pics/product/modern-surfaces-701128-223648.jpeg);
+    background: url(https://s.yimg.com/uu/api/res/1.2/lVIoqcVlGJmRGYiL2G7uLg--/aD0xMDI0O3c9MjA0ODtzbT0xO2FwcGlkPXl0YWNoeW9u/http://media.zenfs.com/en-US/homerun/marie_claire_447/2f2803c7ecfd391eecb2616209b6cb52);
+    background-size: 100%;
    }
 </style>
 <div class = 'container'>
