--- a/templates/show_poem.html
+++ b/templates/show_poem.html
@@ -5,7 +5,7 @@
     <title>poem</title>
     <style>
   body {
-    background: url(https://www.keramspb.ru/files/pics/product/modern-surfaces-701128-223648.jpeg);
+    background: url(https://basik.ru/images/water_wallpapers_53/008_wallpaper.jpg);
    }
     </style>
 </head>
