--- a/templates/show_poem.html
+++ b/templates/show_poem.html
@@ -20,7 +20,7 @@
 n = n+1 ) }}">Next poem</a>
                   <a href="{{ url_for('show_poem',
 n = n-1 ) }}">Previous poem</a>
-                  <a href="{{ url_for('random_ch') }}">Random poem</a>
+                  <!--<a href="{{ url_for('random_ch') }}">Random poem</a>-->
               </li>
             </ul>
 </div>
