--- a/templates/random_ch.html
+++ b/templates/random_ch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>random poem</title>
+    <title>random_ch</title>
     <style>
   body {
     background: url(http://kobmer.ru/www/11/derevyannyy_fon_svetlyy_tekstura_3036x2000.jpg);
